--- a/index.html
+++ b/index.html
@@ -1,67 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Project</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
-
-</head>
-<body>
-  
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+  </head>
+  <body>
     <section class="top-banner">
-        <div class="container">
-          <h1 class="heading">Get The Weather</h1>
-          <form id = "get-weather-form">
-            <input type="text" id= "city" name ="city" placeholder="Search for a city" autofocus>
-            <button type="submit">SUBMIT</button>
-            <span class="msg"></span>
-          </form>
-        </div>
-      </section>
+      <div class="container">
+        <h1 class="heading"><b>Get The Weather</b></h1>
+        <form id="get-weather-form">
+          <input
+            type="text"
+            id="city"
+            name="city"
+            placeholder="Search for a city"
+            autofocus
+          />
+          <button type="submit">SUBMIT</button>
+          <span class="msg">Will display error if needed</span>
+        </form>
 
         <div class="weather-container">
           <div class="weather-info">
-              <div class="city">
-                <h1>Melbourne</h1>
-              </div>
+            <div class="city">
+              <h1>Melbourne</h1>
+            </div>
 
-              <div class ="temperature">
-                <img src = "" alt = "">
-                <span id="temp" >10</span>
-                <span id="Celcius">C</span>
-              </div>
-              <div class="weather-description">
-                Sunny but could change
-              </div>
-
+            <div class="temperature">
+              <img src="" alt="" />
+              <span id="temp">10</span>
+              <span id="Celcius">C</span>
+            </div>
+            <div class="weather-description">Sunny but could change</div>
           </div>
-
-
         </div>
+      </div>
+    </section>
+
+    <section class="ajax-section">
+      <div class="card-container">
+        <ul class="card-cities"></ul>
+      </div>
+    </section>
 
 
 
 
 
 
-
-      <section class="ajax-section">
-        <div class="container">
-          <ul class="cities"></ul>
-        </div>
-      </section>
-
-
-
-
-
-
-      
-      <script src="index.js"></script>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
