--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Libre+Baskerville:wght@400;700&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
     <section class="top-banner">
@@ -54,7 +54,8 @@
     </section>
 
 
-    <p class = "image-info">Photo by <a id= "photographer" href="#">name</a></p>
+    <p class = "image-info">Photo by <a id= "photographer" href="#"></a>
+    </p>
     
     <script src="index.js"></script>
     
