added current location button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             />
             <button onclick = "findWeather(); getBackgroundImage();" type="button">Search</button>
             <span class="msg"></span>
+            <span>______________________________</span>
+            <button onclick ="useCurrentLocation();getBackgroundImage();"; type="button">Use my location</button>
           </form>
   
           <div class="weather-container">
