--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Project</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Libre+Baskerville:wght@400;700&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/@geoapify/geocoder-autocomplete@^1/styles/minimal.css">
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Libre+Baskerville:wght@400;700&family=Playfair+Display:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="top-banner">
@@ -17,57 +22,68 @@
         <div class="border-box">
           <form id="get-weather-form">
             <input
+              autocomplete="off"
               type="text"
               id="city"
               name="city"
               placeholder="City name,country code optional"
               autofocus
             />
-            <button onclick = "findWeather(); getBackgroundImage();" type="button">Search</button>
+            <div id="autocomplete" class="autocomplete-container"></div>
+
+            <button
+              id="searchBtn"
+              onclick="findWeather(); getBackgroundImage();"
+              type="button"
+              autocomplete=""
+            >
+              Search
+            </button>
             <span class="msg"></span>
             <span>______________________________</span>
-            <button onclick ="useCurrentLocation();getBackgroundImage();"; type="button">Use my location</button>
+            <button
+              onclick="useCurrentLocation();getBackgroundImage();"
+              ;
+              type="button"
+            >
+              Use my location
+            </button>
           </form>
-  
+
           <div class="weather-container">
             <div class="weather-info">
-              <div >
+              <div>
                 <h1 id="city-result"></h1>
               </div>
-  
+
               <div class="temperature">
-                <img src="" id= "icon" alt="" />
+                <img src="" id="icon" alt="" />
                 <span id="temp"></span>
                 <span id="celcius"></span>
               </div>
-              <div >
+              <div>
                 <p id="weather-description"></p>
               </div>
             </div>
           </div>
         </div>
-        
       </div>
     </section>
-
-    <section class="ajax-section">
-      <div class="container">
-        <ul class="cities">
-          <li></li>
-        </ul>
-      </div>
-    </section>
-
+    <section class="footer">
     <div class="photo-container">
-      <p class = "image-info">
-      </p>
-      <a id= "photographer" href=""></a>
-  
+      <p class="image-info"></p>
+      <a id="photographer" href=""></a>
     </div>
-   
-
-
+    <div class="bye">
+      <h4>
+        Made By
+        <a href="https://ericpham19.github.io/Eric-s-personal-website/"
+          >Eric Pham</a
+        >
+        ❤
+      </h4>
+    </div>
+  </section>
     <script src="index.js"></script>
-    
   </body>
 </html>
